--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
-    <img src="assets/img/logo.png" alt="Global">
     <p>Deepu Cyriac</p>
   </a>
   <p class="device-notification--message">Engineer | Developer</p>
@@ -38,14 +37,13 @@
             <li class="is-active"><span>Home</span></li>
             <li><span>Works</span></li>
             <li><span>About</span></li>
-            <li><span>Contact</span></li>
           </ul>
         </nav>
         <ul class="l-main-content main-content">
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>Hello! I'm<br>Deepu Cyriac<br>Developer | Designer</h1>
+                <h1>Hello! I'm<br>Deepu Cyriac</h1><br><h2>Developer | Designer</h2>
               </div>
               <div class="intro--options">
                 <a href="#0">
@@ -65,34 +63,34 @@
           </li>
           <li class="l-section section">
             <div class="work">
-              <h2>Selected work</h2>
+              <h2>My Works</h2>
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="#0">
+                    <a href="https://github.com/deepu-cyriac/virtual-class" target=”_blank”>
                       <div class="slider--item-image">
-                        <img src="assets/img/work-victory.jpg" alt="Victory">
+                        <img src="assets/img/vclsroom.jpeg" alt="Virtual Classroom">
                       </div>
-                      <p class="slider--item-title">Victory</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Virtual Classroom</p>
+                      <p class="slider--item-description">An experimental application to conduct virtual classes build using Node.js, Express.js and EJS.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
-                    <a href="#0">
+                    <a href="https://github.com/deepu-cyriac/chatapp" target=”_blank”>
                       <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
+                        <img src="assets/img/chatapp.jpeg" alt="Chat Application">
                       </div>
-                      <p class="slider--item-title">Metiew &amp; Smith</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Chat Application</p>
+                      <p class="slider--item-description">A simple chat application built using React.js and Flask.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
-                    <a href="#0">
+                    <a href="https://github.com/deepu-cyriac/hosp-mgmt" target=”_blank”>
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
+                        <img src="assets/img/patient.jpeg" alt="Patient Details Application">
                       </div>
-                      <p class="slider--item-title">Alex Nowak</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Patient Details Application</p>
+                      <p class="slider--item-description">An application to handle patient details built using Java and MySQL.</p>
                     </a>
                   </li>
                 </ul>
@@ -119,35 +117,37 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>We<br>believe in<br>passionate<br>people</h2>
-                <img src="assets/img/about-visual.png" alt="About Us">
-              </div>
-              <div class="about--options">
-                <a href="#0">
-                  <h3>Winners</h3>
-                </a>
-                <a href="#0">
-                  <h3>Philosophy</h3>
-                </a>
-                <a href="#0">
-                  <h3>History</h3>
-                </a>
-              </div>
-            </div>
-          </li>
-          <li class="l-section section">
-            <div class="contact">
-              <div class="contact--lockup">
-                <div class="modal">
-                  <div class="modal--information">
-                    <p>Pawia 5, 31-154 Kraków, Poland</p>
-                    <a href="mailto:deepucvk123@gmail.com">deepucvk123@gmail.com</a>
-                  </div>
-                  <ul class="modal--options">
-                    <li><a href="#0">Bēhance</a></li>
-                    <li><a href="#0">dribbble</a></li>
-                    <li><a href="mailto:ouremail@gmail.com">Contact Us</a></li>
+                <h2>About me</h2>
+                <p>
+                  Education
+                  <hr />
+                  <ul>
+                    <li>
+                      Bachelor of Technology - Computer Science<br>
+                      Federal Institute of Science and Technology (FISAT), Angamaly<br>
+                      2018 - 2022
+                    </li>
+                    <li>
+                      Holy Cross HSS Cherpunkal<br>
+                      2016 - 2018
+                    </li>
                   </ul>
+                  <br>
+                  Experience
+                  <hr />
+                  <ul>
+                    <li>
+                      Systems Engineer<br>
+                      Tata Consultancy Services (TCS)<br>
+                      2022 - Present
+                    </li>
+                    <li>
+                      Student Intern<br>
+                      Cognizant Technology Solutions<br>
+                      2021 - 2022
+                    </li>
+                  </ul>
+                </p>
                 </div>
               </div>
             </div>
@@ -160,7 +160,6 @@
     <li class="is-active">Home</li>
     <li>Works</li>
     <li>About</li>
-    <li>Contact</li>
   </ul>
 </div>
 
