final final changes

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>About me</h2>
+                <h3 style="font-size: xx-large;">About me</h3>
                 <p>
                   Education
                   <hr />
@@ -147,8 +147,13 @@
                       2021 - 2022
                     </li>
                   </ul>
+                  <br>
+                  Contact
+                  <hr />
+                  <a href="mailto:deepucvk123@gmail.com">Email</a>
+                  <a href="https://github.com/deepu-cyriac" target=”_blank”>Github</a>
                 </p>
-                </div>
+              </div>
               </div>
             </div>
           </li>
