--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                   <hr />
                   <a href="mailto:deepucvk123@gmail.com">Email</a>
                   <a href="https://github.com/deepu-cyriac" target=”_blank”>Github</a>
+                  <a href="https://www.linkedin.com/in/deepu-cyriac-380573160">LinkedIn</a>
                 </p>
               </div>
               </div>
